--- a/reviewer/index.css
+++ b/reviewer/index.css
@@ -1,17 +1,31 @@
 .container {
-	height: 90vh;
+	height: 100vh;
 	display: flex;
-	justify-content: space-evenly;
 	align-items: center;
 }
 
+.section {
+	width: 33vw;
+	height: 100%;
+	display: flex;
+	flex-flow: wrap;
+	align-content: flex-start;
+	overflow: hidden;
+}
+
 .smiley {
-	z-index: 1;
 	width: 15vw;
 	height: 15vw;
 	border-radius: 50%;
 	border: 3px solid black;
 }
+
+/* #happy-smiley:target {
+	animation-name: response-smiley;
+	animation-duration: 300ms;
+	animation-iteration-count: 10;
+	animation-timing-function: ease-in-out;
+} */
 
 .happy {
 	background-color: lightgreen;
@@ -70,3 +84,10 @@
 	border: 3px solid black;
 	border-radius: 15px;
 }
+
+/* @keyframes response-smiley {
+	25% {width: 16vw; height:16vw;}
+	50% {width: 17vw; height:17vw;}
+	75% {width: 16vw; height:16vw;}
+	100% {width: 15vw; height:15vw;}
+} */
